Feat: testes unitários de Auth e CRUD de Usuario